# pes-aprendizagem-maquina-1

./: .gitignore  README.md  notebook.ipynb  projeto.py  projeto_notebook.ipynb  pyproject.toml
